# generative-ai

./: ......prompt.yml  .git-blame-ignore-revs  .gitignore  .gitleaksignore  .repo-metadata.json  .ruff.toml  .textlintrc  Agi  CLAUDE_DOWNLOADER_README.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cachiman README.md  Jupyter script. Teseracto.  LOCAL_AUDIOBOOK_README.md  PDF_Conversational_Assistant_w__Gemini-Pro_&_Langchain .ipynb  README-toc.md  README.md  README_test.md  RESOURCES.md  SECURITY.md  Teseracto A.I.  code_scanning_&_vulnerability_detection_with_Gemini 1.5.ipynb  download_claude_links.py  download_claude_links_requirements.txt  fix-redirect-links.py  fix-run-view-deploy-links.py  gemini_summarize_pr.py  labeler_test.py  local_audiobook_generator.py  local_audiobook_requirements.txt  lychee.toml  notebook_template.ipynb  noxfile.py  owlbot.py  renovate.json  rubric_based_eval.ipynb
agents/adk/contract-compliance-pipeline/python-extraction-agent/: Dockerfile  pyproject.toml
agents/adk/new-hire-onboarding/: README.md  TUTORIAL.md  pyproject.toml  sessions.db
agents/adk/new-hire-onboarding/app/: __init__.py  agent.py  agent_runtime_app.py  fast_api_app.py  live_onboarding.py  resume_handler.py  state_schema.py  tools.py
agents/tau2-adk-harness/tau2-bench/: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
agents/tau2-adk-harness/tau2-bench/.github/: CODEOWNERS
agents/tau2-adk-harness/tau2-bench/scripts/: start_tau2_server.sh
agents/tau2-adk-harness/tau2-bench/tests/: conftest.py  test_agent.py  test_environment.py  test_llm_utils.py  test_orchestrator.py  test_run.py  test_tasks.py  test_user.py  test_utils.py
gemini/agents/genai-experience-concierge/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
gemini/agents/genai-experience-concierge/agent-design-patterns/: README.md  function-calling.ipynb  guardrail-classifier.ipynb  semantic-router.ipynb  task-planner.ipynb
gemini/agents/genai-experience-concierge/scripts/: license_check.py
gemini/data-generation/: README.md  main.ipynb  pyproject.toml  synthetic_data_generation_using_gemini.ipynb
gemini/data-generation/outputs/: blog_ideas.csv  blog_post_comments.csv  blog_posts.csv  csvw_metadata.json  seeds.csv  users.csv
gemini/data-generation/synthetic_data_generation/plugins/: Gemini.py  Wikipedia.py
gemini/data-generation/synthetic_data_generation/prompts/: blog_generator.jinja  comment_generator.jinja
gemini/evaluation/synthetic-data-evals/: .gitignore  README.md  clean.sh  config.py  customer_support_agent.py  customer_support_eval.json  dataset_generator.py  evaluator.py  main.py  model_comparison_results.csv  noxfile.py  pyproject.toml  render_evals.py  run.ipynb  setup.py  synthetic_agent_dataset.json  vertex_model.py
gemini/hallucinations/: README.md  pyproject.toml
gemini/hallucinations/examples/: big.csv  toy.csv
gemini/hallucinations/src/gemhall/: __init__.py  cli.py  eval.py  judge.py  judge_llm.py  metrics.py  prompts.py  runner.py
gemini/mcp/adk_multiagent_mcp_app/: Dockerfile  README.md  main.py  pyproject.toml
gemini/mcp/adk_multiagent_mcp_app/mcp_server/: cocktail.py  weather_server.py
gemini/mcp/adk_multiagent_mcp_app/static/: index.html  main.js  script.js  styles.css  tabs.js  userGuide.js  user_guide.md  websocketApp.js
gemini/multimodal-live-api/livekit-adk/: .gitignore  Dockerfile  README.md  pyproject.toml
gemini/multimodal-live-api/livekit-adk/app/: livekit_agent.py  livekit_bridge.py  main.py
gemini/multimodal-live-api/native-audio-websocket-demo-apps/wealth-advisor/: DEPLOYMENT_GUIDE.md  LICENSE  README.md  pyproject.toml  taskfile.env.sample  uv.toml
gemini/sample-apps/bigquery-metadata-generation/00-metadata-generator/: .gitignore  README.md  pyproject.toml
gemini/sample-apps/bigquery-metadata-generation/01-metadata-applicator/: .gitignore  README.md  pyproject.toml
gemini/sample-apps/e2e-gen-ai-app-starter-pack/: .gitignore  .python-lint  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASES.md  __init__.py  pyproject.toml
gemini/sample-apps/e2e-gen-ai-app-starter-pack/app/: README.md  chain.py  server.py
gemini/sample-apps/e2e-gen-ai-app-starter-pack/deployment/: README.md
gemini/sample-apps/e2e-gen-ai-app-starter-pack/notebooks/: getting_started.ipynb
gemini/sample-apps/e2e-gen-ai-app-starter-pack/streamlit/: side_bar.py  streamlit_app.py
gemini/sample-apps/gemini-hallcheck/: README.md  pyproject.toml
gemini/sample-apps/gemini-hallcheck/examples/: toy.csv
gemini/sample-apps/llamaindex-rag/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_poetry.txt
gemini/sample-apps/llamaindex-rag/backend/: README.md
gemini/sample-apps/llamaindex-rag/common/: common.py  config.yaml  utils.py
gemini/sample-apps/llamaindex-rag/src/: README.md
gemini/sample-apps/llamaindex-rag/ui/: Dockerfile  requirements.txt  🏠 Home.py
gemini/use-cases/PromptWatchDog/watchdog/: pyproject.toml  simulate_stream.py
search/gemini-enterprise/ge-migration-agent/: .gitignore  README.md  core.py  migrate.py  pyproject.toml  requirements.txt
search/gemini-enterprise/ge-migration-agent/ge_migration_agent/: .env.sample  __init__.py  a2ui_schema.py  agent.py  agent.py.bak  run_playground.sh  run_web_playground.sh
search/gemini-enterprise/ge-migration-agent/sample_data/: gemini_gems_data.html
search/gemini-enterprise/ge-migration-agent/skills/: SKILL.md  __init__.py  migration_skill.py
tools/llmevalkit/: README.md  index.py  prompt-management-tutorial.ipynb  pyproject.toml
tools/llmevalkit/pages/: 1_Prompt_Management.py  2_Dataset_Creation.py  3_Evaluation.py  4_One_Click_Refiner.py  4_Prompt_Optimization.py  5_Performance_Tuner.py  5_Prompt_Optimization_Results.py  6_Prompt_Optimization.py  6_Prompt_Records.py  7_Prompt_Optimization_Results.py  8_Performance_Tuner.py  8_Prompt_Records.py
tools/llmevalkit/src/: .env.example  gcp_dataset.py  gcp_evaluation.py  gcp_prompt.py  vapo_lib.py
tools/llmevalkit/tests/: test_evaluation_page.py
(+4756 files in other folders)
