[tool.poetry]
name = "synthetic-data-generation"
version = "0.0.0"
description = ""
authors = ["Your Name <youremailaddress@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
snowfakery = "^3.6.2"
wikipedia-api = "^0.6.0"
python-slugify = "^8.0.4"
google-cloud-aiplatform = "^1.44.0"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "vertexai",
    "vertexai.*",
    "snowfakery",
    "snowfakery.*",
    "wikipediaapi",
    "wikipediaapi.*",
]
ignore_missing_imports = true
