[project]
name = "gemini-hallcheck"
version = "0.1.1"
description = "Confidence-targeted, abstention-aware hallucination evaluator for Gemini via google-genai"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="You"}]
dependencies = [
  "google-genai>=1.30.0",
  "pandas>=2.0.0",
  "matplotlib>=3.8.0",
  "numpy>=1.24.0",
  "tqdm>=4.66.0",
]

[project.scripts]
gemhall = "gemhall.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
