[project]
name = "synthetic-data-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.3.2",
    "google-cloud-aiplatform[evaluation,reasoningengine]>=1.82.0",
    "instructor>=1.7.2",
    "kaggle>=1.6.17",
    "litellm>=1.61.9",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
    "set-env-colab-kaggle-dotenv>=0.1.4",
    "smolagents>=1.9.2",
    "weave>=0.51.34",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "nbqa>=1.9.1",
    "nox>=2025.2.9",
]
