[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry]
name = "llamaindex-rag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache License, Version 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "6.0.2"
llama-index = "0.11.14"
aiohttp = "3.10.11"
aiosignal = "1.3.1"
altair = "5.4.1"
annotated-types = "0.7.0"
antlr4-python3-runtime = "4.13.2"
anyio = "4.6.0"
appdirs = "1.4.4"
asgiref = "3.8.1"
async-timeout = "5.0.1"
attrs = "24.2.0"
backoff = "2.2.1"
bcrypt = "4.2.0"
beautifulsoup4 = "4.12.3"
blinker = "1.8.2"
build = "1.2.2"
cachecontrol = "0.14.0"
cachetools = "5.5.0"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.3.2"
chroma-hnswlib = "0.7.6"
chromadb = "0.5.11"
cleo = "2.1.0"
click = "8.1.7"
coloredlogs = "15.0.1"
contourpy = "1.3.0"
crashtest = "0.4.1"
cryptography = "44.0.1"
cycler = "0.12.1"
dataclasses-json = "0.6.7"
datasets = "2.21.0"
deprecated = "1.2.14"
dill = "0.3.9"
dirtyjson = "1.0.8"
distlib = "0.3.8"
distro = "1.9.0"
dnspython = "2.6.1"
docstring-parser = "0.16"
dulwich = "0.22.1"
email-validator = "2.2.0"
entrypoints = "0.4"
exceptiongroup = "1.2.2"
faker = "33.0.0"
fastapi = "0.115.0"
fastapi-cli = "0.0.5"
fastjsonschema = "2.20.0"
favicon = "0.7.0"
filelock = "3.16.1"
flatbuffers = "24.3.25"
fonttools = "4.54.1"
frozenlist = "1.4.1"
gitdb = "4.0.11"
gitpython = "3.1.43"
google-api-core = "2.20.0"
google-auth = "2.35.0"
google-cloud-aiplatform = "1.68.0"
google-cloud-bigquery = "3.26.0"
google-cloud-core = "2.4.1"
google-cloud-documentai = "2.32.0"
google-cloud-resource-manager = "1.12.5"
google-cloud-secret-manager = "2.20.2"
google-cloud-storage = "2.18.2"
google-crc32c = "1.6.0"
google-resumable-media = "2.7.2"
googleapis-common-protos = "1.65.0"
greenlet = "3.1.1"
grpc-google-iam-v1 = "0.13.1"
grpcio = "1.66.2"
grpcio-status = "1.66.2"
h11 = "0.14.0"
htbuilder = "0.6.2"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.2"
huggingface-hub = "0.25.1"
humanfriendly = "10.0"
hydra-core = "1.3.2"
idna = "3.10"
importlib-metadata = "7.2.1"
importlib-resources = "6.4.5"
iniconfig = "2.0.0"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jeepney = "0.8.0"
jinja2 = "3.1.6"
joblib = "1.4.2"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
keyring = "24.3.1"
kiwisolver = "1.4.7"
kubernetes = "31.0.0"
langchain = "0.3.1"
langchain-community = "0.3.1"
langchain-core = "0.3.7"
langchain-google-vertexai = "1.0.10"
langchain-openai = "0.2.1"
langchain-text-splitters = "0.3.0"
langsmith = "0.1.129"
llama-cloud = "0.1.0"
llama-index-agent-openai = "0.3.4"
llama-index-cli = "0.3.1"
llama-index-core = "0.11.14"
llama-index-embeddings-openai = "0.2.5"
llama-index-embeddings-vertex = "0.2.1"
llama-index-indices-managed-llama-cloud = "0.4.0"
llama-index-legacy = "0.9.48.post3"
llama-index-llms-openai = "0.2.9"
llama-index-llms-vertex = "0.3.6"
llama-index-multi-modal-llms-openai = "0.2.1"
llama-index-program-openai = "0.2.0"
llama-index-question-gen-openai = "0.2.0"
llama-index-readers-file = "0.2.2"
llama-index-readers-llama-parse = "0.3.0"
llama-index-vector-stores-chroma = "0.2.0"
llama-index-vector-stores-vertexaivectorsearch = "0.1.0"
llama-parse = "0.5.6"
lxml = "5.3.0"
markdown = "3.7"
markdown-it-py = "3.0.0"
markdownify = "0.13.1"
markdownlit = "0.0.7"
marko = "2.1.2"
markupsafe = "2.1.5"
marshmallow = "3.22.0"
matplotlib = "3.9.2"
mdurl = "0.1.2"
mmh3 = "4.1.0"
monotonic = "1.6"
more-itertools = "10.5.0"
mpmath = "1.3.0"
msgpack = "1.1.0"
multidict = "6.1.0"
multiprocess = "0.70.17"
mypy-extensions = "1.0.0"
nest-asyncio = "1.6.0"
networkx = "3.3"
nltk = "3.9.1"
numpy = "1.26.4"
oauthlib = "3.2.2"
omegaconf = "2.3.0"
onnxruntime = "1.19.2"
openai = "1.50.2"
opentelemetry-api = "1.27.0"
opentelemetry-exporter-otlp-proto-common = "1.27.0"
opentelemetry-exporter-otlp-proto-grpc = "1.27.0"
opentelemetry-instrumentation = "0.46b0"
opentelemetry-instrumentation-asgi = "0.46b0"
opentelemetry-instrumentation-fastapi = "0.46b0"
opentelemetry-proto = "1.27.0"
opentelemetry-sdk = "1.27.0"
opentelemetry-semantic-conventions = "0.46b0"
opentelemetry-util-http = "0.46b0"
orjson = "3.10.7"
overrides = "7.7.0"
packaging = "24.1"
pandas = "2.2.3"
pdfminer-six = "20240706"
pexpect = "4.9.0"
pillow = "10.4.0"
pkginfo = "1.11.1"
platformdirs = "4.3.6"
pluggy = "1.5.0"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
posthog = "3.6.6"
prometheus-client = "0.21.0"
proto-plus = "1.24.0"
protobuf = "4.25.5"
ptyprocess = "0.7.0"
pyarrow = "18.0.0"
pyarrow-hotfix = "0.6"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.1"
pycparser = "2.22"
pydantic = "2.9.2"
pydantic-core = "2.24.0"
pydeck = "0.9.1"
pygments = "2.18.0"
pymdown-extensions = "10.11.1"
pyparsing = "3.1.4"
pypdf = "4.3.1"
pypika = "0.48.9"
pyproject-hooks = "1.2.0"
pysbd = "0.3.4"
pytest = "8.3.3"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.18"
pytz = "2024.2"
ragas = "0.1.20"
rapidfuzz = "3.10.0"
referencing = "0.35.1"
regex = "2024.9.11"
requests = "2.32.3"
requests-oauthlib = "2.0.0"
requests-toolbelt = "1.0.0"
rich = "13.8.1"
rpds-py = "0.20.0"
rsa = "4.9"
secretstorage = "3.3.3"
shapely = "2.0.6"
shellingham = "1.5.4"
six = "1.16.0"
smmap = "5.0.1"
sniffio = "1.3.1"
soupsieve = "2.6"
sqlalchemy = "2.0.35"
st-annotated-text = "4.0.1"
st-theme = "1.2.3"
starlette = "0.40.0"
streamlit = "1.38.0"
streamlit-camera-input-live = "0.2.0"
streamlit-card = "1.0.2"
streamlit-embedcode = "0.1.2"
streamlit-extras = "0.4.7"
streamlit-faker = "0.0.3"
streamlit-image-coordinates = "0.1.9"
streamlit-keyup = "0.2.4"
streamlit-toggle-switch = "1.0.2"
streamlit-vertical-slider = "2.5.5"
striprtf = "0.0.26"
sympy = "1.13.3"
tenacity = "8.5.0"
tiktoken = "0.7.0"
tokenizers = "0.20.0"
toml = "0.10.2"
tomli = "2.0.1"
tomlkit = "0.13.2"
toolz = "0.12.1"
tornado = "6.4.1"
tqdm = "4.66.5"
trove-classifiers = "2024.9.12"
typer = "0.12.5"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
uvicorn = "0.31.0"
uvloop = "0.20.0"
validators = "0.34.0"
virtualenv = "20.26.6"
watchdog = "6.0.0"
watchfiles = "1.0.3"
websocket-client = "1.8.0"
websockets = "14.1"
wrapt = "1.16.0"
xxhash = "3.5.0"
yarl = "1.13.1"
zipp = "3.20.2"
llama-index-storage-docstore-firestore = "^0.2.0"
llama-index-storage-index-store-firestore = "^0.3.0"
llama-index-retrievers-vertexai-search = "^0.1.0"
llama-index-retrievers-bm25 = "^0.3.0"
google-cloud-logging = "^3.11.0"
anthropic = {extras = ["vertex"], version = "^0.34.0"}
weave = "^0.51.0"
black = "^24.8.0"
flake8 = "^7.1.1"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
