[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry]
name = "llamaindex-rag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache License, Version 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "6.0.2"
llama-index = "0.12.28"
aiohttp = "3.12.14"
aiosignal = "1.3.2"
altair = "5.5.0"
annotated-types = "0.7.0"
antlr4-python3-runtime = "4.13.2"
anyio = "4.9.0"
appdirs = "1.4.4"
asgiref = "3.8.1"
async-timeout = "5.0.1"
attrs = "24.3.0"
backoff = "2.2.1"
bcrypt = "4.3.0"
beautifulsoup4 = "4.13.3"
blinker = "1.9.0"
build = "1.2.2.post1"
cachecontrol = "0.14.2"
cachetools = "5.5.2"
certifi = "2024.12.14"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
chroma-hnswlib = "0.7.6"
chromadb = "0.6.3"
cleo = "2.1.0"
click = "8.1.8"
coloredlogs = "15.0.1"
contourpy = "1.3.1"
crashtest = "0.4.1"
cryptography = "44.0.2"
cycler = "0.12.1"
dataclasses-json = "0.6.7"
datasets = "2.21.0"
deprecated = "1.2.18"
dill = "0.3.9"
dirtyjson = "1.0.8"
distlib = "0.3.9"
distro = "1.9.0"
dnspython = "2.7.0"
docstring-parser = "0.16"
dulwich = "0.22.8"
email-validator = "2.2.0"
entrypoints = "0.4"
exceptiongroup = "1.2.2"
faker = "33.3.1"
fastapi = "0.115.12"
fastapi-cli = "0.0.7"
fastjsonschema = "2.21.1"
favicon = "0.7.0"
filelock = "3.18.0"
flatbuffers = "24.12.23"
fonttools = "4.56.0"
frozenlist = "1.5.0"
gitdb = "4.0.12"
gitpython = "3.1.44"
google-api-core = "2.24.2"
google-auth = "2.38.0"
google-cloud-aiplatform = "1.87.0"
google-cloud-bigquery = "3.31.0"
google-cloud-core = "2.4.3"
google-cloud-documentai = "2.35.0"
google-cloud-resource-manager = "1.14.2"
google-cloud-secret-manager = "2.23.2"
google-cloud-storage = "2.19.0"
google-crc32c = "1.7.1"
google-resumable-media = "2.7.2"
googleapis-common-protos = "1.69.2"
greenlet = "3.1.1"
grpc-google-iam-v1 = "0.14.2"
grpcio = "1.71.0"
grpcio-status = "1.71.0"
h11 = "0.16.0"
htbuilder = "0.9.0"
httpcore = "1.0.7"
httptools = "0.6.4"
httpx = "0.28.1"
huggingface-hub = "0.30.1"
humanfriendly = "10.0"
hydra-core = "1.3.2"
idna = "3.10"
importlib-metadata = "7.2.1"
importlib-resources = "6.5.2"
iniconfig = "2.1.0"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jeepney = "0.9.0"
jinja2 = "3.1.6"
joblib = "1.4.2"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
keyring = "24.3.1"
kiwisolver = "1.4.8"
kubernetes = "31.0.0"
langchain = "0.3.22"
langchain-community = "0.3.20"
langchain-core = "0.3.49"
langchain-google-vertexai = "1.0.10"
langchain-openai = "0.3.12"
langchain-text-splitters = "0.3.7"
langsmith = "0.3.22"
llama-cloud = "0.1.17"
llama-index-agent-openai = "0.4.6"
llama-index-cli = "0.4.1"
llama-index-core = "0.12.28"
llama-index-embeddings-openai = "0.3.1"
llama-index-embeddings-vertex = "0.3.2"
llama-index-indices-managed-llama-cloud = "0.6.10"
llama-index-legacy = "0.9.48.post4"
llama-index-llms-openai = "0.3.29"
llama-index-llms-vertex = "0.4.5"
llama-index-multi-modal-llms-openai = "0.5.0"
llama-index-program-openai = "0.3.1"
llama-index-question-gen-openai = "0.3.0"
llama-index-readers-file = "0.4.7"
llama-index-readers-llama-parse = "0.4.0"
llama-index-vector-stores-chroma = "0.4.1"
llama-index-vector-stores-vertexaivectorsearch = "0.2.0"
llama-parse = "0.6.4.post1"
lxml = "5.3.1"
markdown = "3.7"
markdown-it-py = "3.0.0"
markdownify = "0.14.1"
markdownlit = "0.0.7"
marko = "2.1.2"
markupsafe = "2.1.5"
marshmallow = "3.26.1"
matplotlib = "3.10.1"
mdurl = "0.1.2"
mmh3 = "4.1.0"
monotonic = "1.6"
more-itertools = "10.6.0"
mpmath = "1.3.0"
msgpack = "1.1.0"
multidict = "6.3.1"
multiprocess = "0.70.17"
mypy-extensions = "1.0.0"
nest-asyncio = "1.6.0"
networkx = "3.4.2"
nltk = "3.9.1"
numpy = "1.26.4"
oauthlib = "3.2.2"
omegaconf = "2.3.0"
onnxruntime = "1.21.0"
openai = "1.70.0"
opentelemetry-api = "1.31.1"
opentelemetry-exporter-otlp-proto-common = "1.31.1"
opentelemetry-exporter-otlp-proto-grpc = "1.31.1"
opentelemetry-instrumentation = "0.46b0"
opentelemetry-instrumentation-asgi = "0.46b0"
opentelemetry-instrumentation-fastapi = "0.46b0"
opentelemetry-proto = "1.31.1"
opentelemetry-sdk = "1.31.1"
opentelemetry-semantic-conventions = "0.46b0"
opentelemetry-util-http = "0.46b0"
orjson = "3.10.16"
overrides = "7.7.0"
packaging = "24.2"
pandas = "2.2.3"
pdfminer-six = "20240706"
pexpect = "4.9.0"
pillow = "10.4.0"
pkginfo = "1.12.1.2"
platformdirs = "4.3.7"
pluggy = "1.5.0"
poetry-core = "1.9.1"
poetry-plugin-export = "1.9.0"
posthog = "3.23.0"
prometheus-client = "0.21.1"
proto-plus = "1.26.1"
protobuf = "4.25.8"
ptyprocess = "0.7.0"
pyarrow = "18.1.0"
pyarrow-hotfix = "0.6"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.2"
pycparser = "2.22"
pydantic = "2.11.1"
pydantic-core = "2.33.1"
pydeck = "0.9.1"
pygments = "2.19.1"
pymdown-extensions = "10.14.3"
pyparsing = "3.2.3"
pypdf = "4.3.1"
pypika = "0.48.9"
pyproject-hooks = "1.2.0"
pysbd = "0.3.4"
pytest = "8.3.5"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.1.0"
python-multipart = "0.0.20"
pytz = "2024.2"
ragas = "0.2.14"
rapidfuzz = "3.12.2"
referencing = "0.36.2"
regex = "2024.11.6"
requests = "2.32.3"
requests-oauthlib = "2.0.0"
requests-toolbelt = "1.0.0"
rich = "13.9.4"
rpds-py = "0.24.0"
rsa = "4.9"
secretstorage = "3.3.3"
shapely = "2.0.7"
shellingham = "1.5.4"
six = "1.17.0"
smmap = "5.0.2"
sniffio = "1.3.1"
soupsieve = "2.6"
sqlalchemy = "2.0.40"
st-annotated-text = "4.0.2"
st-theme = "1.2.3"
starlette = "0.46.1"
streamlit = "1.44.1"
streamlit-camera-input-live = "0.2.0"
streamlit-card = "1.0.2"
streamlit-embedcode = "0.1.2"
streamlit-extras = "0.6.0"
streamlit-faker = "0.0.3"
streamlit-image-coordinates = "0.2.1"
streamlit-keyup = "0.3.0"
streamlit-toggle-switch = "1.0.2"
streamlit-vertical-slider = "2.5.5"
striprtf = "0.0.29"
sympy = "1.13.3"
tenacity = "8.5.0"
tiktoken = "0.9.0"
tokenizers = "0.21.1"
toml = "0.10.2"
tomli = "2.2.1"
tomlkit = "0.13.2"
toolz = "0.12.1"
tornado = "6.5"
tqdm = "4.67.1"
trove-classifiers = "2024.10.21.16"
typer = "0.15.2"
typing-inspect = "0.9.0"
typing-extensions = "4.13.0"
tzdata = "2024.2"
urllib3 = "2.3.0"
uvicorn = "0.34.0"
uvloop = "0.21.0"
validators = "0.34.0"
virtualenv = "20.30.0"
watchdog = "6.0.0"
watchfiles = "1.0.4"
websocket-client = "1.8.0"
websockets = "14.2"
wrapt = "1.17.2"
xxhash = "3.5.0"
yarl = "1.18.3"
zipp = "3.21.0"
llama-index-storage-docstore-firestore = "^0.3.0"
llama-index-storage-index-store-firestore = "^0.4.0"
llama-index-retrievers-vertexai-search = "^0.2.0"
llama-index-retrievers-bm25 = "^0.5.0"
google-cloud-logging = "^3.11.0"
anthropic = {extras = ["vertex"], version = "^0.49.0"}
weave = "^0.51.0"
black = "^24.8.0"
flake8 = "^7.1.1"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
