[project]
name = "watchdog-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.3.1",
    "cloudevents>=1.12.0",
    "functions-framework==3.10.0",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-functions>=1.21.0",
    "google-events>=0.14.0",
    "isort>=8.0.1",
    "langchain>=1.1.3",
    "langchain-google-genai>=4.0.0",
    "python-dotenv>=1.2.1",
    "google-cloud-pubsub>=2.19.0",
    "mypy>=1.19.1",
    "flake8>=7.3.0",
]
